[package]
name = "blisspaper"
version = "0.1.0"
authors = ["Adam Budziak <adam.budziak@10clouds.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = "0.9"
serde = "1.0"
serde_yaml = "0.8"
log = "0.4"
flexi_logger = "0.14"
base64 = "0.10"
derive-new = "0.5"
itertools = "0.8.0"
futures-preview = { "version" = "=0.3.0-alpha.18", features = ["async-await", "nightly"] }
